--- a/comedystylesheet.css
+++ b/comedystylesheet.css
@@ -104,6 +104,21 @@ table{
 	margin-bottom: 15px
 }
 
+#DumbanddumberImg{
+	height: 400px;
+	width :300px;
+	margin-left: 39%;
+	margin-right: 39%;
+	margin-bottom: 15px}
+
+#jumanjitwoImg {
+	height: 400px;
+	width :300px;
+	margin-left: 39%;
+	margin-right: 39%;
+	margin-bottom: 15px
+
+
 
 
 
